--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px;
+  padding: 92px 50px 96px 50px;
 }
 
 .header__menu {
@@ -40,17 +40,325 @@
   display: block;
 }
 .address {
-  font-style: normal;
+   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 18px;
+  line-height: 24.3px;
+  color: #000;
 }
 .header__address {
   justify-self: end;
   max-width: 240px;
+ 
+}
+.adress__link_none {
+  text-decoration: none;
+}
+
+.cover {
+  position: relative;
+  min-height: 757px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 0;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  font-size: 18px;
-  line-height: 1.35;
+  justify-content: space-between;
+  margin-bottom: 180px;
 }
-.header__address a {
+
+.cover__tittle {
+text-transform: uppercase;
+position: relative;
+z-index: 1;
+margin-top: 165px;  
+margin-bottom: 207px;  
+}
+
+.aligned-text {
+  display: block;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 100px;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  line-height: 115px;
+}
+
+.aligned-text_left {
+text-align: left;
+margin-left: 50px;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+  margin-right: 50px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.overlay {
+  position: absolute;
+  background-color: #000000;
+  width: 100%;
+  opacity: 0.6;
+  height: 757px;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.cover__description {
+  display: flex; 
+  align-items: center;       
+  margin: 50px 50px;      
+}
+
+.cover__description-text {
+text-transform: uppercase;
+color: #FFFFFF;
+z-index: 1;
+font-weight: 400;
+font-size: 22px;
+line-height: 28px;
+word-spacing: 15px;
+}
+
+.bet-button {
+  all: unset;
+  box-sizing: border-box;
+  width: 256px;
+  height: 51px;
+  background-color: transparent;
+  border: 1px solid #FFFFFF; 
+  border-radius: 0; 
+  font-weight: 500;   
+  font-size: 22px;
+  line-height: 51px;    
+  letter-spacing: 0;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  z-index: 1;
+  margin-left: auto; 
+}
+
+.lots__heading {
+font-weight: 700;
+font-size: 40px;
+line-height: 100%;
+text-transform: uppercase;
+margin-left: 20px;
+}
+ 
+.lots__card-list {
+  list-style: none;  
+  padding: 0;            
+  display: flex;    
+  flex-wrap: wrap;  
+  gap: 20px;
+  margin:27px 24px 30px;   
+}
+
+.lots__card-list-item {
+  min-height: 596px;  
+  width: 334px;
+  display: flex;      
+}
+
+.card {
+  position: relative;    
+  background-size: cover;       
+  background-position: center;  
+  display: flex;
+  flex-direction: column;  
+  color: #fff;          
+  height: 100%;  
+  z-index: 0;      
+  justify-content: space-between;
+}
+
+.card-link {
+  text-decoration: none;  
+  color: inherit;        
+  display: flex;
+  height: 100%;
+}
+
+.card__title {
+  display: inline-block;
+  z-index: 1;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  margin: 48px 40px auto 48px;
+  line-height: 120%;
+  letter-spacing: 0;
+  text-underline-offset: 4px;      
+}
+
+ .card__text {
+  z-index: 1;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  margin: AUTO  40px 48px 40px;
+ }
+
+ .card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+ }
+
+ .card_type_book{
+  background-image: url(../images/card-lot-02.jpg);
+ }
+
+ .card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+ }
+
+.lots__look-more-link {
+  display: block;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0;
+  text-decoration: underline;
+  color: #000;
+  margin-left: 64px;
+  margin-bottom: 118px;
+}
+ 
+ .about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  margin: 136px 24px 180px;
+  column-gap: 25px;
+  width: 1052px;
+  height: 595px;
+ }
+
+ .about__logo {
+  width: 240px;
+  height: 240px;
+  background: #000;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+ }
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  object-fit: contain;
+ }
+
+.about__column_logo {
+  display: flex;
+  justify-content: center;  
+}
+
+.about__column_text {
+  padding-top: 100px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  margin: 0 0 100px; 
+}
+
+.about__paragraphs {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0;
+  max-width:688px;
+}
+
+.about__text_wider {
+  max-width:693px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;  
+  width: 1100px; 
+  padding: 0px 50px;
+  height: 180px;
+} 
+
+.footer__address {
+  justify-self: start;
+  max-width: 264px;
+}
+
+.footer__menu {
+  justify-self: center;
+
+}
+
+.footer__menu-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center; 
+}
+
+.footer__menu-list-item {
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+.footer__menu-link {
+  color: #000;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing:0;
+  text-align: center;
+}
+
+.footer__menu-link_active {
   text-decoration: none;
+}
+
+ .footer__social-list {
+ list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-self: end;
+  gap: 48px;
+}
+
+.footer__social-link {
+  display: block;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;  
 }
