--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,9 @@
   align-items: center;
   padding: 92px 50px 96px 50px;
 }
-
 .header__menu {
   justify-self: start;
 }
-
 .header__links-list {
   display: flex;
   gap: 33px;
@@ -16,30 +14,24 @@
   padding: 0;
   list-style: circle;
 }
-
 .header__links-list-item_no-bullit {
   list-style: none;
 }
-
 .header__link {
   text-decoration: underline;
   color: #000;
   font-size: 18px;
 }
-
 .header__link_active {
   text-decoration: none;
 }
-
 .header__logo {
   display: block;
   width: 105px;
 }
-
 .header__logo-image {
   display: block;
 }
-
 .address {
    display: flex;
   flex-direction: column;
@@ -48,20 +40,16 @@
   line-height: 24.3px;
   color: #000;
 }
-
 .header__address {
   justify-self: end;
   max-width: 240px;
- 
 }
-
 .adress__link_none {
   text-decoration: none;
 }
-
 .cover {
   position: relative;
-  min-height: 757px;
+  max-height: 757px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -72,7 +60,6 @@
   justify-content: space-between;
   margin-bottom: 180px;
 }
-
 .cover__tittle {
 text-transform: uppercase;
 position: relative;
@@ -80,7 +67,6 @@ z-index: 1;
 margin-top: 165px;  
 margin-bottom: 207px;  
 }
-
 .aligned-text {
   display: block;
   font-family: Raleway;
@@ -91,25 +77,20 @@ margin-bottom: 207px;
   color: #FFFFFF;
   line-height: 115px;
 }
-
 .aligned-text_left {
 text-align: left;
 margin-left: 50px;
 }
-
 .aligned-text_center {
   text-align: center;
 }
-
 .aligned-text_right {
   text-align: right;
   margin-right: 50px;
 }
-
 .no-letter-spacing {
   letter-spacing: 0;
 }
-
 .overlay {
   position: absolute;
   background-color: #000000;
@@ -118,13 +99,11 @@ margin-left: 50px;
   width: 100%;
   height: 100%;
 }
-
 .cover__description {
   display: flex; 
   align-items: center;       
   margin: 50px 50px;      
 }
-
 .cover__description-text {
   text-transform: uppercase;
   color: #FFFFFF;
@@ -134,7 +113,6 @@ margin-left: 50px;
   line-height: 28px;
   word-spacing: 15px;
 }
-
 .bet-button {
   all: unset;
   box-sizing: border-box;
@@ -153,7 +131,6 @@ margin-left: 50px;
   z-index: 1;
   margin-left: auto; 
 }
-
 .lots__heading {
   font-weight: 700;
   font-size: 40px;
@@ -161,7 +138,6 @@ margin-left: 50px;
   text-transform: uppercase;
   margin-left: 20px;
 }
- 
 .lots__card-list {
   list-style: none;  
   padding: 0;            
@@ -170,13 +146,11 @@ margin-left: 50px;
   gap: 20px;
   margin:27px 24px 30px;   
 }
-
 .lots__card-list-item {
   min-height: 596px;  
   width: 334px;
   display: flex;      
 }
-
 .card {
   position: relative;    
   background-size: cover;       
@@ -188,14 +162,12 @@ margin-left: 50px;
   z-index: 0;      
   justify-content: space-between;
 }
-
 .card-link {
   text-decoration: none;  
   color: inherit;        
   display: flex;
   height: 100%;
 }
-
 .card__title {
   display: inline-block;
   z-index: 1;
@@ -207,7 +179,6 @@ margin-left: 50px;
   letter-spacing: 0;
   text-underline-offset: 4px;      
 }
-
  .card__text {
   z-index: 1;
   font-weight: 400;
@@ -216,19 +187,15 @@ margin-left: 50px;
   letter-spacing: 0%;
   margin: 40px 48px 40px;
  }
-
  .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
  }
-
  .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
  }
-
  .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
  }
-
 .lots__look-more-link {
   display: block;
   font-weight: 400;
@@ -240,7 +207,6 @@ margin-left: 50px;
   margin-left: 64px;
   margin-bottom: 118px;
 }
- 
  .about {
   display: grid;
   grid-template-columns: 334px 1fr;
@@ -249,7 +215,6 @@ margin-left: 50px;
   width: 1052px;
   height: 595px;
  }
-
  .about__logo {
   width: 240px;
   height: 240px;
@@ -259,22 +224,18 @@ margin-left: 50px;
   justify-content: center; 
   align-items: center; 
  }
-
 .about__logo-image {
   width: 148px;
   height: 114px;
   object-fit: contain;
  }
-
 .about__column_logo {
   display: flex;
   justify-content: center;  
 }
-
 .about__column_text {
   padding-top: 100px;
 }
-
 .about__title {
   font-weight: 700;
   font-size: 40px;
@@ -283,13 +244,11 @@ margin-left: 50px;
   text-transform: uppercase;
   margin: 0 0 100px; 
 }
-
 .about__paragraphs {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
-
 .about__text {
   font-weight: 400;
   font-size: 20px;
@@ -297,11 +256,9 @@ margin-left: 50px;
   letter-spacing: 0;
   max-width:688px;
 }
-
 .about__text_wider {
   max-width:693px;
 }
-
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;  
@@ -309,31 +266,26 @@ margin-left: 50px;
   padding: 0px 50px;
   height: 180px;
 } 
-
 .footer__address {
   justify-self: start;
   max-width: 264px;
 }
-
 .footer__menu {
   justify-self: center;
 
 }
-
 .footer__menu-list {
   list-style: none;
   padding: 0;
   margin: 0;
   text-align: center; 
 }
-
 .footer__menu-list-item {
   font-weight: 400;
   font-size: 18px;
   letter-spacing: 0;
   text-align: center;
 }
-
 .footer__menu-link {
   color: #000;
   font-weight: 400;
@@ -341,11 +293,9 @@ margin-left: 50px;
   letter-spacing:0;
   text-align: center;
 }
-
 .footer__menu-link_active {
   text-decoration: none;
 }
-
  .footer__social-list {
  list-style: none;
   padding: 0;
@@ -354,11 +304,9 @@ margin-left: 50px;
   justify-self: end;
   gap: 48px;
 }
-
 .footer__social-link {
   display: block;
 }
-
 .footer__social-icon {
   width: 48px;
   height: 48px;  
