--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px 96px 50px;
+  padding: 92px 50px 96px;
 }
 .header__menu {
   justify-self: start;
@@ -33,12 +33,9 @@
   display: block;
 }
 .address {
-   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   font-size: 18px;
   line-height: 24.3px;
-  color: #000;
+  font-style: normal;
 }
 .header__address {
   justify-self: end;
@@ -49,7 +46,7 @@
 }
 .cover {
   position: relative;
-  max-height: 757px;
+  min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -60,19 +57,19 @@
   justify-content: space-between;
   margin-bottom: 180px;
 }
-.cover__tittle {
-text-transform: uppercase;
-position: relative;
-z-index: 1;
-margin-top: 165px;  
-margin-bottom: 207px;  
+.cover__title {
+  text-transform: uppercase;
+  position: relative;
+  z-index: 1;
+  margin-top: 165px;  
+  margin-bottom: 135px;  
 }
 .aligned-text {
   display: block;
   font-family: Raleway;
   font-weight: 700;
   font-size: 100px;
-  letter-spacing: 30px;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
   color: #FFFFFF;
   line-height: 115px;
@@ -93,8 +90,8 @@ margin-left: 50px;
 }
 .overlay {
   position: absolute;
-  background-color: #000000;
-  opacity: 0.6;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 1;
   width: 100%;
   height: 100%;
@@ -102,7 +99,7 @@ margin-left: 50px;
 .cover__description {
   display: flex; 
   align-items: center;       
-  margin: 50px 50px;      
+  margin: 0 50px 50px;
 }
 .cover__description-text {
   text-transform: uppercase;
@@ -136,7 +133,7 @@ margin-left: 50px;
   font-size: 40px;
   line-height: 100%;
   text-transform: uppercase;
-  margin-left: 20px;
+  margin-left: 64px;
 }
 .lots__card-list {
   list-style: none;  
@@ -144,7 +141,7 @@ margin-left: 50px;
   display: flex;    
   flex-wrap: wrap;  
   gap: 20px;
-  margin:27px 24px 30px;   
+  margin: 27px 24px 30px 24px; 
 }
 .lots__card-list-item {
   min-height: 596px;  
@@ -186,16 +183,16 @@ margin-left: 50px;
   line-height: 120%;
   letter-spacing: 0%;
   margin: 40px 48px 40px;
- }
+}
  .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
- }
+}
  .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
- }
+}
  .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
- }
+}
 .lots__look-more-link {
   display: block;
   font-weight: 400;
@@ -212,9 +209,7 @@ margin-left: 50px;
   grid-template-columns: 334px 1fr;
   margin: 136px 24px 180px;
   column-gap: 25px;
-  width: 1052px;
-  height: 595px;
- }
+}
  .about__logo {
   width: 240px;
   height: 240px;
@@ -223,12 +218,12 @@ margin-left: 50px;
   display: flex;
   justify-content: center; 
   align-items: center; 
- }
+}
 .about__logo-image {
   width: 148px;
   height: 114px;
   object-fit: contain;
- }
+}
 .about__column_logo {
   display: flex;
   justify-content: center;  
@@ -242,7 +237,7 @@ margin-left: 50px;
   line-height: 40px;
   letter-spacing: 0;
   text-transform: uppercase;
-  margin: 0 0 100px; 
+  margin: 0 0 100px;
 }
 .about__paragraphs {
   display: flex;
