--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,11 @@
   align-items: center;
   padding: 92px 50px 96px;
 }
+
 .header__menu {
   justify-self: start;
 }
+
 .header__links-list {
   display: flex;
   gap: 33px;
@@ -14,36 +16,45 @@
   padding: 0;
   list-style: circle;
 }
+
 .header__links-list-item_no-bullit {
   list-style: none;
 }
+
 .header__link {
   text-decoration: underline;
   color: #000;
   font-size: 18px;
 }
+
 .header__link_active {
   text-decoration: none;
 }
+
 .header__logo {
   display: block;
   width: 105px;
 }
+
 .header__logo-image {
   display: block;
 }
+
 .address {
   font-size: 18px;
   line-height: 24.3px;
   font-style: normal;
 }
+
 .header__address {
   justify-self: end;
   max-width: 240px;
 }
+
 .adress__link_none {
   text-decoration: none;
 }
+
 .cover {
   position: relative;
   min-height: 757px;
@@ -57,13 +68,15 @@
   justify-content: space-between;
   margin-bottom: 180px;
 }
+
 .cover__title {
   text-transform: uppercase;
   position: relative;
   z-index: 1;
-  margin-top: 165px;  
-  margin-bottom: 135px;  
+  margin-top: 165px;
+  margin-bottom: 135px;
 }
+
 .aligned-text {
   display: block;
   font-family: Raleway;
@@ -72,22 +85,27 @@
   letter-spacing: 0.3em;
   text-transform: uppercase;
   color: #FFFFFF;
-  line-height: 115px;
+  line-height: 1.15;
 }
+
 .aligned-text_left {
 text-align: left;
 margin-left: 50px;
 }
+
 .aligned-text_center {
   text-align: center;
 }
+
 .aligned-text_right {
   text-align: right;
   margin-right: 50px;
 }
+
 .no-letter-spacing {
   letter-spacing: 0;
 }
+
 .overlay {
   position: absolute;
   inset: 0;
@@ -96,11 +114,15 @@ margin-left: 50px;
   width: 100%;
   height: 100%;
 }
+
 .cover__description {
   display: flex; 
   align-items: center;       
   margin: 0 50px 50px;
+  position: relative;
+  z-index: 1;
 }
+
 .cover__description-text {
   text-transform: uppercase;
   color: #FFFFFF;
@@ -109,7 +131,9 @@ margin-left: 50px;
   font-size: 22px;
   line-height: 28px;
   word-spacing: 15px;
+  margin-right: 78px;
 }
+
 .bet-button {
   all: unset;
   box-sizing: border-box;
@@ -126,28 +150,32 @@ margin-left: 50px;
   text-transform: uppercase;
   color: #FFFFFF;
   z-index: 1;
-  margin-left: auto; 
+  margin-left: auto;
 }
+
 .lots__heading {
   font-weight: 700;
   font-size: 40px;
   line-height: 100%;
   text-transform: uppercase;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
 }
+
 .lots__card-list {
   list-style: none;  
   padding: 0;            
   display: flex;    
   flex-wrap: wrap;  
   gap: 20px;
-  margin: 27px 24px 30px 24px; 
+  margin: 27px 24px 30px 24px;
 }
+
 .lots__card-list-item {
   min-height: 596px;  
   width: 334px;
-  display: flex;      
+  display: flex; 
 }
+
 .card {
   position: relative;    
   background-size: cover;       
@@ -159,12 +187,14 @@ margin-left: 50px;
   z-index: 0;      
   justify-content: space-between;
 }
+
 .card-link {
   text-decoration: none;  
   color: inherit;        
   display: flex;
   height: 100%;
 }
+
 .card__title {
   display: inline-block;
   z-index: 1;
@@ -174,25 +204,30 @@ margin-left: 50px;
   margin: 48px 40px auto 48px;
   line-height: 120%;
   letter-spacing: 0;
-  text-underline-offset: 4px;      
+  text-underline-offset: 4px;
 }
+
  .card__text {
   z-index: 1;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0%;
-  margin: 40px 48px 40px;
+  margin: auto 48px 40px;
 }
+
  .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
 }
+
  .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
 }
+
  .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
 }
+
 .lots__look-more-link {
   display: block;
   font-weight: 400;
@@ -204,12 +239,14 @@ margin-left: 50px;
   margin-left: 64px;
   margin-bottom: 118px;
 }
+
  .about {
   display: grid;
   grid-template-columns: 334px 1fr;
   margin: 136px 24px 180px;
   column-gap: 25px;
 }
+
  .about__logo {
   width: 240px;
   height: 240px;
@@ -217,20 +254,24 @@ margin-left: 50px;
   border-radius: 50%;
   display: flex;
   justify-content: center; 
-  align-items: center; 
+  align-items: center;
 }
+
 .about__logo-image {
   width: 148px;
   height: 114px;
   object-fit: contain;
 }
+
 .about__column_logo {
   display: flex;
-  justify-content: center;  
+  justify-content: center;
 }
+
 .about__column_text {
-  padding-top: 100px;
+  padding-top: 133px;
 }
+
 .about__title {
   font-weight: 700;
   font-size: 40px;
@@ -239,11 +280,13 @@ margin-left: 50px;
   text-transform: uppercase;
   margin: 0 0 100px;
 }
+
 .about__paragraphs {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
+
 .about__text {
   font-weight: 400;
   font-size: 20px;
@@ -251,36 +294,43 @@ margin-left: 50px;
   letter-spacing: 0;
   max-width:688px;
 }
+
 .about__text_wider {
   max-width:693px;
 }
+
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;  
-  width: 1100px; 
-  padding: 0px 50px;
-  height: 180px;
-} 
+  padding: 0px 50px 80px;
+  margin-top: 180px;
+
+}
+
 .footer__address {
   justify-self: start;
   max-width: 264px;
 }
+
 .footer__menu {
   justify-self: center;
 
 }
+
 .footer__menu-list {
   list-style: none;
   padding: 0;
   margin: 0;
-  text-align: center; 
+  text-align: center;
 }
+
 .footer__menu-list-item {
   font-weight: 400;
   font-size: 18px;
   letter-spacing: 0;
   text-align: center;
 }
+
 .footer__menu-link {
   color: #000;
   font-weight: 400;
@@ -288,9 +338,11 @@ margin-left: 50px;
   letter-spacing:0;
   text-align: center;
 }
+
 .footer__menu-link_active {
   text-decoration: none;
 }
+
  .footer__social-list {
  list-style: none;
   padding: 0;
@@ -299,10 +351,12 @@ margin-left: 50px;
   justify-self: end;
   gap: 48px;
 }
+
 .footer__social-link {
   display: block;
 }
+
 .footer__social-icon {
   width: 48px;
-  height: 48px;  
+  height: 48px;
 }
