--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px 96px;
+  padding: 92px 50px 96px 50px;
 }
 
 .header__menu {
@@ -25,6 +25,8 @@
   text-decoration: underline;
   color: #000;
   font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 0;
 }
 
 .header__link_active {
@@ -33,31 +35,35 @@
 
 .header__logo {
   display: block;
-  width: 105px;
+  width: 148px;
+  height: 105px;
 }
 
 .header__logo-image {
-  display: block;
+  height: 100%;
 }
 
 .address {
+  font-style: normal;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   font-size: 18px;
   line-height: 24.3px;
-  font-style: normal;
+  color: #000;
 }
-
 .header__address {
   justify-self: end;
-  max-width: 240px;
+  max-width: 236.49px;
 }
-
 .adress__link_none {
   text-decoration: none;
 }
 
 .cover {
   position: relative;
-  min-height: 757px;
+  max-height: 757px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -71,10 +77,14 @@
 
 .cover__title {
   text-transform: uppercase;
-  position: relative;
   z-index: 1;
-  margin-top: 165px;
-  margin-bottom: 135px;
+  margin-top: 165px;  
+  margin-bottom: 96px;  
+  margin-left: 50px;
+  margin-right: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .aligned-text {
@@ -82,15 +92,14 @@
   font-family: Raleway;
   font-weight: 700;
   font-size: 100px;
-  letter-spacing: 0.3em;
+  letter-spacing: 30px;
   text-transform: uppercase;
   color: #FFFFFF;
-  line-height: 1.15;
+  line-height: 115px;
 }
 
 .aligned-text_left {
-text-align: left;
-margin-left: 50px;
+  text-align: left;
 }
 
 .aligned-text_center {
@@ -99,7 +108,6 @@ margin-left: 50px;
 
 .aligned-text_right {
   text-align: right;
-  margin-right: 50px;
 }
 
 .no-letter-spacing {
@@ -108,8 +116,8 @@ margin-left: 50px;
 
 .overlay {
   position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: #000000;
+  opacity: 0.6;
   z-index: 1;
   width: 100%;
   height: 100%;
@@ -118,9 +126,11 @@ margin-left: 50px;
 .cover__description {
   display: flex; 
   align-items: center;       
-  margin: 0 50px 50px;
-  position: relative;
-  z-index: 1;
+  margin-left: 50px;  
+  margin-right: 50px;  
+  margin-top: 8px;
+  margin-bottom: 50px;
+  z-index: 1;  
 }
 
 .cover__description-text {
@@ -130,8 +140,7 @@ margin-left: 50px;
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
-  word-spacing: 15px;
-  margin-right: 78px;
+  word-spacing: 19px;
 }
 
 .bet-button {
@@ -150,30 +159,30 @@ margin-left: 50px;
   text-transform: uppercase;
   color: #FFFFFF;
   z-index: 1;
-  margin-left: auto;
+  margin-left: auto; 
 }
 
 .lots__heading {
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 100%;
-  text-transform: uppercase;
-  margin: 0 0 0 64px;
+font-weight: 700;
+font-size: 40px;
+line-height: 100%;
+text-transform: uppercase;
+margin-left: 20px;
 }
-
+ 
 .lots__card-list {
   list-style: none;  
   padding: 0;            
   display: flex;    
   flex-wrap: wrap;  
   gap: 20px;
-  margin: 27px 24px 30px 24px;
+  margin:27px 24px 30px;   
 }
 
 .lots__card-list-item {
   min-height: 596px;  
   width: 334px;
-  display: flex; 
+  display: flex;      
 }
 
 .card {
@@ -204,7 +213,7 @@ margin-left: 50px;
   margin: 48px 40px auto 48px;
   line-height: 120%;
   letter-spacing: 0;
-  text-underline-offset: 4px;
+  text-underline-offset: 4px;      
 }
 
  .card__text {
@@ -213,20 +222,20 @@ margin-left: 50px;
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0%;
-  margin: auto 48px 40px;
-}
+  margin: AUTO  40px 48px 40px;
+ }
 
  .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-}
+ }
 
- .card_type_book {
+ .card_type_book{
   background-image: url(../images/card-lot-02.jpg);
-}
+ }
 
  .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-}
+ }
 
 .lots__look-more-link {
   display: block;
@@ -239,13 +248,15 @@ margin-left: 50px;
   margin-left: 64px;
   margin-bottom: 118px;
 }
-
+ 
  .about {
   display: grid;
   grid-template-columns: 334px 1fr;
   margin: 136px 24px 180px;
   column-gap: 25px;
-}
+  width: 1052px;
+  height: 595px;
+ }
 
  .about__logo {
   width: 240px;
@@ -254,22 +265,22 @@ margin-left: 50px;
   border-radius: 50%;
   display: flex;
   justify-content: center; 
-  align-items: center;
-}
+  align-items: center; 
+ }
 
 .about__logo-image {
   width: 148px;
   height: 114px;
   object-fit: contain;
-}
+ }
 
 .about__column_logo {
   display: flex;
-  justify-content: center;
+  justify-content: center;  
 }
 
 .about__column_text {
-  padding-top: 133px;
+  padding-top: 100px;
 }
 
 .about__title {
@@ -278,7 +289,7 @@ margin-left: 50px;
   line-height: 40px;
   letter-spacing: 0;
   text-transform: uppercase;
-  margin: 0 0 100px;
+  margin: 0 0 100px; 
 }
 
 .about__paragraphs {
@@ -302,10 +313,10 @@ margin-left: 50px;
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;  
-  padding: 0px 50px 80px;
-  margin-top: 180px;
-
-}
+  width: 1100px; 
+  padding: 0px 50px;
+  height: 180px;
+} 
 
 .footer__address {
   justify-self: start;
@@ -321,7 +332,7 @@ margin-left: 50px;
   list-style: none;
   padding: 0;
   margin: 0;
-  text-align: center;
+  text-align: center; 
 }
 
 .footer__menu-list-item {
@@ -358,5 +369,5 @@ margin-left: 50px;
 
 .footer__social-icon {
   width: 48px;
-  height: 48px;
+  height: 48px;  
 }
